app/src/parser/transactions/pvm/banff/snapshots/rslib__parser__transactions__pvm__banff__add_permissionless_delegator__tests__ui_permissionless_delegator.snap
---
source: app/src/parser/transactions/pvm/banff/add_permissionless_delegator.rs
expression: reduced
---
[
    "AddPermlessDelega": "Transaction",
    "Validator": "NodeID-9ig1HmgE4hECbPAugbAbb283e9PdGeji5",
    "SubnetID": "2r2x62v3WxP6xs7rZhoakaTK3hxpf1L6q8bqs6FZ83dTcKFwRA",
    "Start time": "2022-12-12 17:15:03 UTC",
    "End time": "2023-01-11 17:15:03 UTC",
    "Total stake(LUX)": "2000",
    "Stake": "2000 LUX to ",
    "Address": "local1x0h0l3j8sh8emq88wvwe7v0k00grch8sh4entf",
    "Rewards to": "local1wte7hxh2lq5rqywwdephlhkdvh4var6jtuu57r",
    "Fee(LUX)": "0",
]
